@@ -1,4 +1,5 @@
 2017-12-21
+- Fix wrong offset calculation if unknown options are found
 - Add x-late src/dst ip aggregation, if compiled with NSEL support
 
 2017-12-17
